* 2006-02-25 Jeremy Sanders <jeremy@jeremysanders.net>
  - Rework line marker point plotting 
  - Add lozenge plot symbols
  - Tweak click to select to add another couple of pixels
  
* 2006-02-22 Jeremy Sanders <jeremy@jeremysanders.net>
  - Improved arrow symbol shapes
  - Added arrows pointing away from the point
	
* 2006-02-13 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fixed problem reloading data files with blocks
	
* 2006-02-05 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fixed bug where linked datasets may not work in saved files
  - Key positioning improved in the case of no border
  - Reorganising some of the Dataset/LinkedFile code
  - Backend CSV importing done
  - Added ImportFileCSV command
  - Added CSV tab to import dialog
	
* 2006-02-04 Jeremy Sanders <jeremy@jeremysanders.net>
  - Add a few more plot symbols
  - Make Paste undoable
  - Paste preserves widget name if possible
	
* 2006-02-02 Jeremy Sanders <jeremy@jeremysanders.net>
  - Add upside down triangle plot symbol
	
* 2006-01-28 Jeremy Sanders <jeremy@jeremysanders.net>
  - Some fixes to work around Windows issues

* 2006-01-18 Jeremy Sanders <jeremy@jeremysanders.net>
  - Get ready for 0.9

* 2006-01-15 Jeremy Sanders <jeremy@jeremysanders.net>
  - Convert FITS import to operations
  - All CommandInterface now uses operations
  - Fix FITS file detection code
  - Clear history after file loaded
  
* 2006-01-14 Jeremy Sanders <jeremy@jeremysanders.net>
  - Make fitting use operations
  - Update (some) commandinterface to use operations
  
* 2006-01-02 Jeremy Sanders <jeremy@jeremysanders.net>
  - Bug fix with missing axes
  - Update main copyright years to 2006
  
* 2006-01-01 Jeremy Sanders <jeremy@jeremysanders.net>
  - pychecker fixes
  - Yet more undo/redo changes (dataset edit)
  
* 2005-12-31 Jeremy Sanders <jeremy@jeremysanders.net>
  - Yet more undo/redo changes
  - Take dataset operations out of doc.py

* 2005-12-27 Jeremy Sanders <jeremy@jeremysanders.net>