@@ -1,3 +1,6 @@
+* 2006-03-14 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Added patch from James to add recent files menu
+	
 * 2006-02-25 Jeremy Sanders <jeremy@jeremysanders.net>
   - Rework line marker point plotting 
   - Add lozenge plot symbols
